--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+ul {
+  list-style: none;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input {
+  font-family: Arial, Helvetica, sans-serif;
+}
