--- a/src/components/pages/itemList/ItemList.css
+++ b/src/components/pages/itemList/ItemList.css
@@ -1,5 +1,16 @@
 .bienvenida {
-  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  padding-top: 50px;
+  padding: 100px;
+}
+
+.bienvenida-mytechnology {
+  color: #00adb5;
+  font-family: rubik;
+  text-align: center;
+  padding: 50px;
+}
+
+.bienvenida-h3 {
+  text-align: center;
+  padding: 100px;
 }
