--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700;0,800;1,500;1,600&display=swap");
+
 * {
   padding: 0;
   margin: 0;
