--- a/src/components/pages/itemList/ItemList.css
+++ b/src/components/pages/itemList/ItemList.css
@@ -14,3 +14,11 @@
   text-align: center;
   padding: 100px;
 }
+
+.product-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 15px;
+  padding: 40px 20px;
+}
