--- a/src/components/pages/itemDetail/itemDetail.css
+++ b/src/components/pages/itemDetail/itemDetail.css
@@ -1,1 +1,17 @@
+.itemDetailContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
 
+.itemDetailInfo {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
